--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -580,11 +580,11 @@ AnimStateTransitionNode="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -596,17 +596,12 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_PushableObject.BP_PushableObject
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/PushComponent.PushComponent
-OpenAssetsAtExit=/Game/Characters/Mannequins/Animations/ABP_Quinn.ABP_Quinn
-OpenAssetsAtExit=/Game/Characters/Mannequins/Animations/ABP_Manny.ABP_Manny
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Characters/Mannequins/Animations/PushIdle_BS_1
-MRUItem1=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
-MRUItem2=/Game/Characters/Mannequins/Animations/PushIdle_BS
-MRUItem3=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem0=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem1=/Game/Characters/Mannequins/Animations/PushIdle_BS_1
+MRUItem2=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
+MRUItem3=/Game/Characters/Mannequins/Animations/PushIdle_BS
 MRUItem4=/Game/Characters/Mannequins/Animations/ABP_Quinn
 MRUItem5=/Game/Characters/Mannequins/Animations/PushPull_BS
 MRUItem6=/Game/ThirdPerson/Blueprints/PushComponent
@@ -1219,6 +1214,7 @@ SkeletalMeshComponent.Events=True
 /Game/Characters/Mannequins/Animations/ABP_Quinn.ABP_Quinn=0
 /Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton.SK_Mannequin_Skeleton=0
 /Game/Characters/Mannequins/Animations/PushIdle_BS.PushIdle_BS=0
+/Game/Characters/Mannequins/Animations/ABP_Manny.ABP_Manny=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
