JV BUG FIX part 1

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -340,7 +340,7 @@ K2Node_Variable=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collisio
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis
 PlayerStart=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
-CapsuleComponent=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
+CapsuleComponent=
 K2Node_FunctionResult=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 GetPushableHeight=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 GetPushableHeight_6=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
@@ -349,6 +349,7 @@ AnimationGraph=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision
 K2Node_FunctionEntry=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 K2Node=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 EdGraphNode_Comment=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
+SceneComponent=StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSize=2
@@ -576,10 +577,13 @@ K2Node="\"Object\" "
 AnimStateNode="\"Object\" "
 AnimStateNodeBase="\"Object\" "
 AnimStateTransitionNode="\"Object\" "
+StaticMesh="\"Object\" "
+StreamableRenderAsset="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletonEditor
@@ -598,22 +602,23 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem1=/Game/Characters/Mannequins/Animations/PushIdle_BS_1
-MRUItem2=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
-MRUItem3=/Game/Characters/Mannequins/Animations/PushIdle_BS
-MRUItem4=/Game/Characters/Mannequins/Animations/ABP_Quinn
-MRUItem5=/Game/Characters/Mannequins/Animations/PushPull_BS
-MRUItem6=/Game/ThirdPerson/Blueprints/PushComponent
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_PushableObject
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem9=/Game/ThirdPerson/Input/IMC_Default
-MRUItem10=/Game/ThirdPerson/Input/Actions/IA_Jump
-MRUItem11=/Game/ThirdPerson/Blueprints/BPI_PushableObject
-MRUItem12=/Game/Characters/Mannequins/Animations/PushLow
-MRUItem13=/Game/Characters/Mannequins/Animations/PushHigh
-MRUItem14=/Game/Characters/Mannequins/Animations/PullLowRight
-MRUItem15=/Game/Characters/Mannequins/Animations/PullLowLeft
+MRUItem0=/Game/Scene/Jediah/Mesh/JustPlane5
+MRUItem1=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem2=/Game/Characters/Mannequins/Animations/PushIdle_BS_1
+MRUItem3=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
+MRUItem4=/Game/Characters/Mannequins/Animations/PushIdle_BS
+MRUItem5=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem6=/Game/Characters/Mannequins/Animations/PushPull_BS
+MRUItem7=/Game/ThirdPerson/Blueprints/PushComponent
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_PushableObject
+MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem10=/Game/ThirdPerson/Input/IMC_Default
+MRUItem11=/Game/ThirdPerson/Input/Actions/IA_Jump
+MRUItem12=/Game/ThirdPerson/Blueprints/BPI_PushableObject
+MRUItem13=/Game/Characters/Mannequins/Animations/PushLow
+MRUItem14=/Game/Characters/Mannequins/Animations/PushHigh
+MRUItem15=/Game/Characters/Mannequins/Animations/PullLowRight
+MRUItem16=/Game/Characters/Mannequins/Animations/PullLowLeft
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -1202,6 +1207,27 @@ SkeletalMeshComponent.ComponentReplication=True
 SkeletalMeshComponent.Activation=True
 SkeletalMeshComponent.Cooking=True
 SkeletalMeshComponent.Events=True
+BP_SplineMesh_C.TransformCommon=True
+BP_SplineMesh_C.Default=True
+BP_SplineMesh_C.Rendering=True
+BP_SplineMesh_C.Replication=True
+BP_SplineMesh_C.Collision=True
+BP_SplineMesh_C.HLOD=True
+BP_SplineMesh_C.Physics=True
+BP_SplineMesh_C.Networking=True
+BP_SplineMesh_C.WorldPartition=True
+BP_SplineMesh_C.Input=True
+BP_SplineMesh_C.Actor=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -1215,6 +1241,7 @@ SkeletalMeshComponent.Events=True
 /Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton.SK_Mannequin_Skeleton=0
 /Game/Characters/Mannequins/Animations/PushIdle_BS.PushIdle_BS=0
 /Game/Characters/Mannequins/Animations/ABP_Manny.ABP_Manny=1
+/Game/Scene/Jediah/Mesh/JustPlane5.JustPlane5=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
