Minor Changes (again)

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -419,7 +419,7 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Scene
+ContentBrowserTab1.SelectedPaths=/
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -697,7 +697,7 @@ MaterialExpression="\"Object\" "
 BuoyancyComponent="\"Object\" \"Object.Buoyancy.BuoyancyData\" \"Object.Buoyancy.BuoyancyData.Pontoons\" \"Object.Buoyancy.BuoyancyData.Pontoons.Pontoons[3]\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=BlueprintEditor
@@ -1849,6 +1849,7 @@ ArrowComponent.Events=True
 /Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Pine_Tree_2_FoliageType.SM_Pine_Tree_2_FoliageType=1
 /Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Pine_Tree_1_FoliageType.SM_Pine_Tree_1_FoliageType=1
 /Engine/EngineMaterials/WorldGridMaterial.WorldGridMaterial=1
+/Game/Paul/BP_Log.BP_Log=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
