--- a/Saved/Config/WindowsEditor/Engine.ini
+++ b/Saved/Config/WindowsEditor/Engine.ini
@@ -72,11 +72,6 @@ EnableTunnel=False
 TunnelUnicastEndpoint=
 TunnelMulticastEndpoint=
 
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=False
-ToggleKeysHotkey=True
-FilterKeysHotkey=True
-StickyKeysConfirmation=True
-ToggleKeysConfirmation=True
-FilterKeysConfirmation=True
+[/Script/UnrealEd.EditorEngine]
+FlipNormalMapGreenChannel=False
 
