Fixed stucking pushing and add camera fix 1.0
- forgot to save

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -317,9 +317,9 @@ TemplateSequenceEditorSettings=EnhancedInputDeveloperSettings.Modifier Default V
 UdpMessagingSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WmfMediaSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_GrabObject.IA_GrabObject,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Look.IA_Look,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Move.IA_Move
-InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_GrabObject.IA_GrabObject,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Look.IA_Look,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Move.IA_Move
+InputAction=
 StaticMeshActor=StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision
-StaticMeshComponent=
+StaticMeshComponent=StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision
 BP_PushableObject_C=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 PropertyWrapper=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 K2Node_VariableGet=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
@@ -355,7 +355,7 @@ BP_Player_C=
 SceneComponent=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 BP_NewCam_C=StaticMeshActor.Collision.Collision,StaticMeshComponent.Collision.Collision
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=
 BP_CameraTriggerBox_C=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 TestPawn_C=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 Pawn=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
@@ -619,10 +619,10 @@ BP_Anim_C="\"Object\" "
 BoxComponent="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
