JV6.0 Full Push & Pull Anim

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -374,9 +374,9 @@ SkeletalMeshActor=StaticMeshActor.Collision.Collision,StaticMeshComponent.Collis
 SkeletalMeshComponent=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 BP_MainCharacter_C=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 AnimStateTransitionNode=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
-PersonaPreviewSceneDescription=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.Settings.Lens,AssetViewerSettings.Settings.Lens|Chromatic Aberration,AssetViewerSettings.Settings.Lens|Bloom,AssetViewerSettings.Settings.Lens|BloomAdvanced,AssetViewerSettings.Settings.Environment,AssetViewerSettings.Settings.PostProcessing
+PersonaPreviewSceneDescription=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.Settings.Lens
 PreviewMeshCollection=
-AssetViewerSettings=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.Settings.Lens,AssetViewerSettings.Settings.Lens|Chromatic Aberration,AssetViewerSettings.Settings.Lens|Bloom,AssetViewerSettings.Settings.Lens|BloomAdvanced,AssetViewerSettings.Settings.Environment,AssetViewerSettings.Settings.PostProcessing
+AssetViewerSettings=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.Settings.Lens
 BoneProxy=BoneProxy.Transforms.Mesh Relative,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Bone
 SkeletalMesh=SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.ImportSettings.Mesh
 LODInfoUILayout=
@@ -425,7 +425,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes
+ContentBrowserDrawer.SelectedPaths=/Game/Scene/Jediah/Mixamo/Push
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -435,7 +435,7 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Scene/Jediah/Mixamo/Mats
+ContentBrowserTab1.SelectedPaths=/Game/Scene/Jediah/Mixamo/Push
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -456,12 +456,12 @@ ContentBrowserTab1.ThumbnailSize=1
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Scene/Jediah/Jediah_Test
+LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
@@ -749,6 +749,14 @@ LandscapeProxy="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
@@ -771,55 +779,38 @@ RecentAssetEditors=TextureEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-OpenAssetsAtExit=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Bush_FoliageType.SM_Bush_FoliageType
-OpenAssetsAtExit=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Fern_FoliageType.SM_Fern_FoliageType
-OpenAssetsAtExit=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_08_FoliageType.SM_Common_Tree_08_FoliageType
-OpenAssetsAtExit=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Grass_FoliageType.SM_Grass_FoliageType
-OpenAssetsAtExit=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_01_FoliageType.SM_Common_Tree_01_FoliageType
-OpenAssetsAtExit=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_03_FoliageType.SM_Common_Tree_03_FoliageType
-OpenAssetsAtExit=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_07_FoliageType.SM_Common_Tree_07_FoliageType
-OpenAssetsAtExit=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_11_FoliageType.SM_Common_Tree_11_FoliageType
-OpenAssetsAtExit=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_10_FoliageType.SM_Common_Tree_10_FoliageType
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Fern_FoliageType
-MRUItem1=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_11_FoliageType
-MRUItem2=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_10_FoliageType
-MRUItem3=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_08_FoliageType
-MRUItem4=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_07_FoliageType
-MRUItem5=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_03_FoliageType
-MRUItem6=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_01_FoliageType
-MRUItem7=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Grass_FoliageType
-MRUItem8=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Bush_FoliageType
-MRUItem9=/Game/Scene/Jediah/Jediah_Test
-MRUItem10=/Game/Stylized_PBR_Nature/Foliage/Assets/SM_Bush
-MRUItem11=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem12=/Game/Scene/Jediah/Material/M_Invis
-MRUItem13=/Game/Scene/Jediah/Particle/Firefly
-MRUItem14=/Game/Scene/Jediah/Mixamo/Mats/gltf_embedded_2
-MRUItem15=/Game/Scene/Jediah/Mixamo/Head_001
-MRUItem16=/Game/Scene/Jediah/Mixamo/Mats/Body_NormalMap
-MRUItem17=/Game/Scene/Jediah/Mixamo/Body_001
-MRUItem18=/Game/Scene/Jediah/Mixamo/Mats/JustTryHopeIg
-MRUItem19=/Game/Scene/Jediah/Mixamo/Mats/gltf_embedded_13
-MRUItem20=/Game/Scene/Jediah/Mixamo/Push
-MRUItem21=/Game/Scene/Jediah/Mixamo/Hair_001
-MRUItem22=/Game/Scene/Jediah/Mixamo/Eyes_001
-MRUItem23=/Game/Scene/Jediah/Mixamo/Bag_001
-MRUItem24=/Game/Scene/Jediah/Mixamo/man/BIGD
-MRUItem25=/Game/Scene/Jediah/Mixamo/man/Massive
-MRUItem26=/Game/Scene/Jediah/Mixamo/man/Scheizher
-MRUItem27=/Game/Scene/Jediah/Mixamo/man/Funny_Jump
-MRUItem28=/Game/Scene/Jediah/Character/BP_MainCharacter
-MRUItem29=/Game/Scene/Jediah/Mixamo/man/Down
+MRUItem0=/Game/Scene/Jediah/Mixamo/Push/Push_4
+MRUItem1=/Game/Scene/Jediah/Mixamo/Push/Push_3
+MRUItem2=/Game/Scene/Jediah/Mixamo/Push/Push_2
+MRUItem3=/Game/Scene/Jediah/Mixamo/Push/Push_1
+MRUItem4=/Game/Scene/Jediah/Mixamo/Pull/Pull_4
+MRUItem5=/Game/Scene/Jediah/Mixamo/Pull/Pull_3
+MRUItem6=/Game/Scene/Jediah/Mixamo/Pull/Pull_2
+MRUItem7=/Game/Scene/Jediah/Mixamo/Pull/Pull_1
+MRUItem8=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Fern_FoliageType
+MRUItem9=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_11_FoliageType
+MRUItem10=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_10_FoliageType
+MRUItem11=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_08_FoliageType
+MRUItem12=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_07_FoliageType
+MRUItem13=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_03_FoliageType
+MRUItem14=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_01_FoliageType
+MRUItem15=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Grass_FoliageType
+MRUItem16=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Bush_FoliageType
+MRUItem17=/Game/Scene/Jediah/Jediah_Test
+MRUItem18=/Game/Stylized_PBR_Nature/Foliage/Assets/SM_Bush
+MRUItem19=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem20=/Game/Scene/Jediah/Material/M_Invis
+MRUItem21=/Game/Scene/Jediah/Particle/Firefly
+MRUItem22=/Game/Scene/Jediah/Mixamo/Mats/gltf_embedded_2
+MRUItem23=/Game/Scene/Jediah/Mixamo/Head_001
+MRUItem24=/Game/Scene/Jediah/Mixamo/Mats/Body_NormalMap
+MRUItem25=/Game/Scene/Jediah/Mixamo/Body_001
+MRUItem26=/Game/Scene/Jediah/Mixamo/Mats/JustTryHopeIg
+MRUItem27=/Game/Scene/Jediah/Mixamo/Mats/gltf_embedded_13
+MRUItem28=/Game/Scene/Jediah/Mixamo/Push
+MRUItem29=/Game/Scene/Jediah/Mixamo/Hair_001
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2038,7 +2029,7 @@ MaterialExpressionVectorParameter.ParameterCustomization=True
 PersonaPreviewSceneDescription.Animation Blueprint=True
 BoneProxy.Transforms=True
 BoneProxy.Bone=True
-Texture2D.Interchange =True
+Texture2D.Interchange=True
 MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
 MaterialExpressionTextureCoordinate.MaterialExpression=True
 NiagaraActor.TransformCommon=True
@@ -2131,6 +2122,14 @@ FoliageInstancedStaticMeshComponent.Cooking=True
 /Game/Scene/Jediah/Mixamo/Eyes_001.Eyes_001=1
 /Game/Scene/Jediah/Mixamo/Mats/Body_NormalMap.Body_NormalMap=1
 /Game/Stylized_PBR_Nature/Foliage/Assets/SM_Bush.SM_Bush=1
+/Game/Scene/Jediah/Mixamo/Pull/Pull_Heavy_Object_Anim.Pull_Heavy_Object_Anim=1
+/Game/Scene/Jediah/Mixamo/Push/Push_1.Push_1=1
+/Game/Scene/Jediah/Mixamo/Push/Push_2.Push_2=1
+/Game/Scene/Jediah/Mixamo/Pull/Pull_2.Pull_2=1
+/Game/Scene/Jediah/Mixamo/Pull/Pull_3.Pull_3=1
+/Game/Scene/Jediah/Mixamo/Pull/Pull_4.Pull_4=1
+/Game/Scene/Jediah/Mixamo/Push/Push_3.Push_3=1
+/Game/Scene/Jediah/Mixamo/Push/Push_4.Push_4=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
