Minor bug-fix on animation

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -375,7 +375,7 @@ SkeletalMeshComponent=StaticMeshComponent.Collision.Collision,StaticMeshActor.Co
 BP_MainCharacter_C=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 AnimStateTransitionNode=StaticMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision
 PersonaPreviewSceneDescription=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.Settings.Lens
-PreviewMeshCollection=
+PreviewMeshCollection=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.Settings.Lens
 AssetViewerSettings=AssetViewerSettings.Settings.Lighting,AssetViewerSettings.Settings.Lens
 BoneProxy=BoneProxy.Transforms.Mesh Relative,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Bone
 SkeletalMesh=SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.ImportSettings.Mesh
@@ -473,12 +473,12 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/Scene/Paul
+LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object\" "
@@ -770,7 +770,7 @@ ParticleSystemComponent="\"Object\" "
 FXSystemComponent="\"Object\" "
 K2Node_InputKey="\"Object\" "
 Testpawn_C="\"Object.Actor.Tags\" "
-Pawn="\"Object.Actor.Tags\" "
+Pawn=
 ProjectileMovementComponent="\"Object\" "
 RadialForceComponent="\"Object\" "
 BPAnim_ChestMonsterRun_C="\"Object\" "
@@ -782,7 +782,7 @@ SplineComponent="\"Object\" "
 BillboardComponent="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
@@ -814,39 +814,39 @@ RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Testpawn.Testpawn
+OpenAssetsAtExit=/Game/Scene/Jediah/Character/BP_MainCharacter.BP_MainCharacter
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/TestPawn
-MRUItem1=/Game/Scene/Paul
-MRUItem2=/Game/Particles_Wind_Control_System/Blueprints/BP_Particle_Candle_Fire
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem4=/Game/Justin/Justin_Level
-MRUItem5=/Game/FXVarietyPack/Blueprints/BP_ky_fireBall
-MRUItem6=/Game/FXVarietyPack/Blueprints/BP_ky_lightning1
-MRUItem7=/Game/FXVarietyPack/Blueprints/BP_ky_waterBall
-MRUItem8=/Game/FXVarietyPack/Blueprints/BP_ky_aquaStorm
-MRUItem9=/Game/FXVarietyPack/Blueprints/BP_ky_darkStorm
-MRUItem10=/Game/FXVarietyPack/Blueprints/BP_ky_explosion
-MRUItem11=/Game/Justin/BPAnim_ChestMonsterRun
-MRUItem12=/Game/Justin/WBP_PauseMenu
-MRUItem13=/Game/Justin/BP_Arrow
-MRUItem14=/Game/Paul/BP_Log_3
-MRUItem15=/Game/Scene/Jediah/Mixamo/Push/Push_4
-MRUItem16=/Game/Scene/Jediah/Mixamo/Push/Push_3
-MRUItem17=/Game/Scene/Jediah/Mixamo/Push/Push_2
-MRUItem18=/Game/Scene/Jediah/Mixamo/Push/Push_1
-MRUItem19=/Game/Scene/Jediah/Mixamo/Pull/Pull_4
-MRUItem20=/Game/Scene/Jediah/Mixamo/Pull/Pull_3
-MRUItem21=/Game/Scene/Jediah/Mixamo/Pull/Pull_2
-MRUItem22=/Game/Scene/Jediah/Mixamo/Pull/Pull_1
-MRUItem23=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Fern_FoliageType
-MRUItem24=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_11_FoliageType
-MRUItem25=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_10_FoliageType
-MRUItem26=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_08_FoliageType
-MRUItem27=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_07_FoliageType
-MRUItem28=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_03_FoliageType
-MRUItem29=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_01_FoliageType
+MRUItem0=/Game/Scene/Jediah/Character/BP_MainCharacter
+MRUItem1=/Game/ThirdPerson/Blueprints/TestPawn
+MRUItem2=/Game/Scene/Paul
+MRUItem3=/Game/Particles_Wind_Control_System/Blueprints/BP_Particle_Candle_Fire
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem5=/Game/Justin/Justin_Level
+MRUItem6=/Game/FXVarietyPack/Blueprints/BP_ky_fireBall
+MRUItem7=/Game/FXVarietyPack/Blueprints/BP_ky_lightning1
+MRUItem8=/Game/FXVarietyPack/Blueprints/BP_ky_waterBall
+MRUItem9=/Game/FXVarietyPack/Blueprints/BP_ky_aquaStorm
+MRUItem10=/Game/FXVarietyPack/Blueprints/BP_ky_darkStorm
+MRUItem11=/Game/FXVarietyPack/Blueprints/BP_ky_explosion
+MRUItem12=/Game/Justin/BPAnim_ChestMonsterRun
+MRUItem13=/Game/Justin/WBP_PauseMenu
+MRUItem14=/Game/Justin/BP_Arrow
+MRUItem15=/Game/Paul/BP_Log_3
+MRUItem16=/Game/Scene/Jediah/Mixamo/Push/Push_4
+MRUItem17=/Game/Scene/Jediah/Mixamo/Push/Push_3
+MRUItem18=/Game/Scene/Jediah/Mixamo/Push/Push_2
+MRUItem19=/Game/Scene/Jediah/Mixamo/Push/Push_1
+MRUItem20=/Game/Scene/Jediah/Mixamo/Pull/Pull_4
+MRUItem21=/Game/Scene/Jediah/Mixamo/Pull/Pull_3
+MRUItem22=/Game/Scene/Jediah/Mixamo/Pull/Pull_2
+MRUItem23=/Game/Scene/Jediah/Mixamo/Pull/Pull_1
+MRUItem24=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Fern_FoliageType
+MRUItem25=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_11_FoliageType
+MRUItem26=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_10_FoliageType
+MRUItem27=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_08_FoliageType
+MRUItem28=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_07_FoliageType
+MRUItem29=/Game/Stylized_PBR_Nature/Foliage/FoliageTypes/SM_Common_Tree_03_FoliageType
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -3842,7 +3842,7 @@ RecentsFiles=D:/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_u
 bHideUnrelatedNodes=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [MRU]
 MRUItem0=/Game/Scene/Paul
