--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -823,7 +823,7 @@ Button="\"Object\" "
 ContentWidget="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -3039,7 +3039,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=148.000
-WindowSize=X=1296.000 Y=736.000
+WindowSize=X=1298.000 Y=738.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3056,7 +3056,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../Users/jielj/OneDrive/Documents/GitHub/Brackeys-2024/Content/Scene
+UNR=../../../../../../Users/User/Documents/GitHub/Brackeys-2024/Content/Scene/Jediah
 BRUSH=C:/Users/jielj/OneDrive/Documents/GitHub/Brackeys-2024/Content/
 FBX=C:/Users/jielj/OneDrive/Documents/GitHub/Brackeys-2024/Content/
 FBXAnim=C:/Users/jielj/OneDrive/Documents/GitHub/Brackeys-2024/Content/
