JV1 font lowered brightness

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -836,8 +836,8 @@ LightComponentBase="\"Object\" "
 BP_VictoryTriggerBox_C="\"Object.Actor.Tags\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
-Widget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
-Visual="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 Button="\"Object\" "
 ContentWidget="\"Object\" "
 PanelWidget="\"Object\" "
@@ -876,7 +876,6 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/Scene/Jediah/UI/MainMenu.MainMenu
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Scene/Jediah/UI/MainMenu
@@ -3201,7 +3200,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=148.000
-WindowSize=X=1300.000 Y=740.000
+WindowSize=X=1302.000 Y=742.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
